; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_nditer_pywrap.c_npyiter_convert_dtypes.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_nditer_pywrap.c_npyiter_convert_dtypes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**, i64)* @npyiter_convert_dtypes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @npyiter_convert_dtypes(i32* %0, i32** %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i64 %2, i64* %7, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @PyTuple_Check(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @PyList_Check(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %15, %3
  %20 = load i32*, i32** %5, align 8
  %21 = call i64 @PySequence_Size(i32* %20)
  %22 = load i64, i64* %7, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %19, %15
  br label %83

25:                                               ; preds = %19
  store i64 0, i64* %8, align 8
  br label %26

26:                                               ; preds = %79, %25
  %27 = load i64, i64* %8, align 8
  %28 = load i64, i64* %7, align 8
  %29 = icmp ult i64 %27, %28
  br i1 %29, label %30, label %82

30:                                               ; preds = %26
  %31 = load i32*, i32** %5, align 8
  %32 = load i64, i64* %8, align 8
  %33 = call i32* @PySequence_GetItem(i32* %31, i64 %32)
  store i32* %33, i32** %9, align 8
  %34 = load i32*, i32** %9, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %51

36:                                               ; preds = %30
  store i64 0, i64* %10, align 8
  br label %37

37:                                               ; preds = %47, %36
  %38 = load i64, i64* %10, align 8
  %39 = load i64, i64* %8, align 8
  %40 = icmp ult i64 %38, %39
  br i1 %40, label %41, label %50

41:                                               ; preds = %37
  %42 = load i32**, i32*** %6, align 8
  %43 = load i64, i64* %10, align 8
  %44 = getelementptr inbounds i32*, i32** %42, i64 %43
  %45 = load i32*, i32** %44, align 8
  %46 = call i32 @Py_XDECREF(i32* %45)
  br label %47

47:                                               ; preds = %41
  %48 = load i64, i64* %10, align 8
  %49 = add i64 %48, 1
  store i64 %49, i64* %10, align 8
  br label %37

50:                                               ; preds = %37
  store i32 0, i32* %4, align 4
  br label %111

51:                                               ; preds = %30
  %52 = load i32*, i32** %9, align 8
  %53 = load i32**, i32*** %6, align 8
  %54 = load i64, i64* %8, align 8
  %55 = getelementptr inbounds i32*, i32** %53, i64 %54
  %56 = call i32 @PyArray_DescrConverter2(i32* %52, i32** %55)
  %57 = icmp ne i32 %56, 1
  br i1 %57, label %58, label %76

58:                                               ; preds = %51
  store i64 0, i64* %11, align 8
  br label %59

59:                                               ; preds = %69, %58
  %60 = load i64, i64* %11, align 8
  %61 = load i64, i64* %8, align 8
  %62 = icmp ult i64 %60, %61
  br i1 %62, label %63, label %72

63:                                               ; preds = %59
  %64 = load i32**, i32*** %6, align 8
  %65 = load i64, i64* %11, align 8
  %66 = getelementptr inbounds i32*, i32** %64, i64 %65
  %67 = load i32*, i32** %66, align 8
  %68 = call i32 @Py_XDECREF(i32* %67)
  br label %69

69:                                               ; preds = %63
  %70 = load i64, i64* %11, align 8
  %71 = add i64 %70, 1
  store i64 %71, i64* %11, align 8
  br label %59

72:                                               ; preds = %59
  %73 = load i32*, i32** %9, align 8
  %74 = call i32 @Py_DECREF(i32* %73)
  %75 = call i32 (...) @PyErr_Clear()
  br label %83

76:                                               ; preds = %51
  %77 = load i32*, i32** %9, align 8
  %78 = call i32 @Py_DECREF(i32* %77)
  br label %79

79:                                               ; preds = %76
  %80 = load i64, i64* %8, align 8
  %81 = add i64 %80, 1
  store i64 %81, i64* %8, align 8
  br label %26

82:                                               ; preds = %26
  store i32 1, i32* %4, align 4
  br label %111

83:                                               ; preds = %72, %24
  %84 = load i32*, i32** %5, align 8
  %85 = load i32**, i32*** %6, align 8
  %86 = getelementptr inbounds i32*, i32** %85, i64 0
  %87 = call i32 @PyArray_DescrConverter2(i32* %84, i32** %86)
  %88 = icmp eq i32 %87, 1
  br i1 %88, label %89, label %110

89:                                               ; preds = %83
  store i64 1, i64* %8, align 8
  br label %90

90:                                               ; preds = %106, %89
  %91 = load i64, i64* %8, align 8
  %92 = load i64, i64* %7, align 8
  %93 = icmp ult i64 %91, %92
  br i1 %93, label %94, label %109

94:                                               ; preds = %90
  %95 = load i32**, i32*** %6, align 8
  %96 = getelementptr inbounds i32*, i32** %95, i64 0
  %97 = load i32*, i32** %96, align 8
  %98 = load i32**, i32*** %6, align 8
  %99 = load i64, i64* %8, align 8
  %100 = getelementptr inbounds i32*, i32** %98, i64 %99
  store i32* %97, i32** %100, align 8
  %101 = load i32**, i32*** %6, align 8
  %102 = load i64, i64* %8, align 8
  %103 = getelementptr inbounds i32*, i32** %101, i64 %102
  %104 = load i32*, i32** %103, align 8
  %105 = call i32 @Py_XINCREF(i32* %104)
  br label %106

106:                                              ; preds = %94
  %107 = load i64, i64* %8, align 8
  %108 = add i64 %107, 1
  store i64 %108, i64* %8, align 8
  br label %90

109:                                              ; preds = %90
  store i32 1, i32* %4, align 4
  br label %111

110:                                              ; preds = %83
  store i32 0, i32* %4, align 4
  br label %111

111:                                              ; preds = %110, %109, %82, %50
  %112 = load i32, i32* %4, align 4
  ret i32 %112
}

declare dso_local i32 @PyTuple_Check(i32*) #1

declare dso_local i32 @PyList_Check(i32*) #1

declare dso_local i64 @PySequence_Size(i32*) #1

declare dso_local i32* @PySequence_GetItem(i32*, i64) #1

declare dso_local i32 @Py_XDECREF(i32*) #1

declare dso_local i32 @PyArray_DescrConverter2(i32*, i32**) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32 @PyErr_Clear(...) #1

declare dso_local i32 @Py_XINCREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
